--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Landing page | Name</title>
+    <title>PizzaTime</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">
+    <!-- header -->
+    <header class="header-page">
+        <div class="container header-page__container">
+            <div class="header-page__start">
+                <a class="logo" href="/">
+                    <img class="logo__img" src="img/common/logo.svg" alt="" width="127" height="21">
+                </a>
+            </div>
+            <div class="header-page__end">
+                <nav class="header-page__nav">
+                    <ul class="header-page__ul">
+                        <li class="header-page__li">
+                            <a class="header-page__link" href="#">
+                                <span class="header-page__text">пицца</span> 
+                            </a>
+                        </li>
+                        <li class="header-page__li">
+                            <a class="header-page__link" href="#">
+                                <span class="header-page__text">о нас</span> 
+                            </a>
+                        </li>
+                        <li class="header-page__li">
+                            <a class="header-page__link" href="#">
+                                <span class="header-page__text">контакты</span> 
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="phone">
+                    <a class="phone__item header-page__phone" href="tel:+79999999999">+7 (999) 999-99-99</a>
+                </div>
 
+                <div class="header-page__burger">
+                    <button class="burger-menu" type="button">
+                        <span class="burger-menu__box">
+                            <span class="burger-menu__inner"></span>
+                        </span>
+                    </button>
+                </div>
+            </div>
         </div>
+        
         <nav class="menu">
 
         </nav>
     </header>
+    <!-- /.header -->
+
+    <!-- section-top -->
+    <section class="section-top">
+        <div class="container section-top__container">
+            <p class="section-top__info">от итальянского повара</p>
+            <h1 class="section-top__title">Лучшая пицца в Москве</h1>
+            <div class="section-top__btn">
+                <button class="btn" type="button">Выбрать</button>
+            </div>
+        </div>
+    </section>
+    <!-- /.section-top -->
 
     <script src="js/main.min.js"></script>
 </body>
