--- a/src/index.html
+++ b/src/index.html
@@ -52,10 +52,6 @@
                 </div>
             </div>
         </div>
-        
-        <nav class="menu">
-
-        </nav>
     </header>
     <!-- /.header -->
 
@@ -317,6 +313,18 @@
         </div>
     </section>
     <!-- /.section-catalog -->
+
+    <!-- section-about -->
+    <section class="section section-about">
+        <img class="section-about__img" src="img/section-about/bg.jpg.jpg" alt="">
+        <div class="container section-about__container">
+            <div class="section-about__content">
+                <h2 class="section__title section-about__title">О нас</h2>
+                <p class="section-about__text">Доставим вам горячую пиццу менее чем за час или пицца бесплатно.<br>Мы готовим пиццу только из свежих продуктов. Каждый день мы покупаем свежие овощи, грибы и мясо.</p>
+            </div>
+        </div>
+    </section>
+    <!-- /.section-about -->
 
     <script src="js/main.min.js"></script>
 </body>
