--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,17 @@
                 <nav class="header-page__nav">
                     <ul class="header-page__ul">
                         <li class="header-page__li">
-                            <a class="header-page__link" href="#">
+                            <a class="header-page__link" href="#" data-scroll-to="section-catalog">
                                 <span class="header-page__text">пицца</span> 
                             </a>
                         </li>
                         <li class="header-page__li">
-                            <a class="header-page__link" href="#">
-                                <span class="header-page__text">о нас</span> 
+                            <a class="header-page__link" href="#" data-scroll-to="section-about">
+                                <span class="header-page__text" >о нас</span> 
                             </a>
                         </li>
                         <li class="header-page__li">
-                            <a class="header-page__link" href="#">
+                            <a class="header-page__link" href="#" data-scroll-to="section-contacts">
                                 <span class="header-page__text">контакты</span> 
                             </a>
                         </li>
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="header-page__burger">
-                    <button class="burger-menu" type="button">
+                    <button class="burger-menu" type="button" data-popup="popup-menu">
                         <span class="burger-menu__box">
                             <span class="burger-menu__inner"></span>
                         </span>
@@ -61,7 +61,7 @@
             <p class="section-top__info">от итальянского повара</p>
             <h1 class="section-top__title">Лучшая пицца в Москве</h1>
             <div class="section-top__btn">
-                <button class="btn" type="button">Выбрать</button>
+                <button class="btn" type="button" data-scroll-to="section-catalog">Выбрать</button>
             </div>
         </div>
     </section>
@@ -109,7 +109,7 @@
                                     <span class="product__price-value">850</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div> 
@@ -133,7 +133,7 @@
                                     <span class="product__price-value">950</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div>    
@@ -157,7 +157,7 @@
                                     <span class="product__price-value">880</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div>
@@ -181,7 +181,7 @@
                                     <span class="product__price-value">1250</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div>
@@ -205,7 +205,7 @@
                                     <span class="product__price-value">890</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div>
@@ -230,7 +230,7 @@
                                     <span class="product__price-value">850</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div>
@@ -255,7 +255,7 @@
                                     <span class="product__price-value">920</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div>
@@ -280,7 +280,7 @@
                                     <span class="product__price-value">990</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div>
@@ -304,7 +304,7 @@
                                     <span class="product__price-value">950</span>
                                     <span class="product__price-currency">&#8381;</span>
                                 </div>
-                                <button class="btn product__btn" type="button">заказать</button>
+                                <button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
                             </div>
                         </footer>
                     </div>
@@ -402,17 +402,17 @@
         <div class="popup__wrapper">
             <div class="popup__inner">
                 <div class="popup__content popup__content--fluid popup__content--centered">
-                    <button class="btn-close popup__btn-close" type="button" aria-label="Закрыть окно"></button>
+                    <button class="btn-close popup__btn-close popup-close" type="button" aria-label="Закрыть окно"></button>
                     <nav class="popup__mobile-menu mobile-menu">
                         <ul class="mobile-menu__ul">
                             <li class="mobile-menu__li">
-                                <a class="mobile-menu__link" href="#">Пицца</a>
+                                <a class="mobile-menu__link popup-close" href="#" data-scroll-to="section-catalog">Пицца</a>
                             </li>
                             <li class="mobile-menu__li">
-                                <a class="mobile-menu__link" href="#">О нас</a>
+                                <a class="mobile-menu__link popup-close" href="#" data-scroll-to="section-about">О нас</a>
                             </li>
                             <li class="mobile-menu__li">
-                                <a class="mobile-menu__link" href="#">Контакты</a>
+                                <a class="mobile-menu__link popup-close" href="#" data-scroll-to="section-contacts">Контакты</a>
                             </li>
                         </ul>
                     </nav>
@@ -463,7 +463,7 @@
         <div class="popup__wrapper">
             <div class="popup__inner">
                 <div class="popup__content">
-                    <button class="btn-close popup__btn-close" type="button" aria-label="Закрыть окно"></button>
+                    <button class="btn-close popup__btn-close popup-close" type="button" aria-label="Закрыть окно"></button>
                     <h2 class="page-title popup__title">Заполните форму</h2>
                     <p class="popup__subtitle popup__subtitle--order">Мы привезем вам горячую пиццу за 50 минут</p>
                     <div class="order">
@@ -499,7 +499,7 @@
         <div class="popup__wrapper">
             <div class="popup__inner">
                 <div class="popup__content">
-                    <button class="btn-close popup__btn-close" type="button" aria-label="Закрыть окно"></button>
+                    <button class="btn-close popup__btn-close popup-close" type="button" aria-label="Закрыть окно"></button>
                     <h2 class="page-title popup__title">Успешно отправлено</h2>
                     <p class="popup__subtitle">Мы уже начали готовить вашу пиццу</p>
                 </div>
@@ -513,7 +513,7 @@
         <div class="popup__wrapper">
             <div class="popup__inner">
                 <div class="popup__content">
-                    <button class="btn-close popup__btn-close" type="button" aria-label="Закрыть окно"></button>
+                    <button class="btn-close popup__btn-close popup-close" type="button" aria-label="Закрыть окно"></button>
                     <h2 class="page-title popup__title">Произошла ошибка</h2>
                     <p class="popup__subtitle">
                         Пожулуйста, сделайте заказ по номеру <a class="popup__link" href="tel:+79999999999">+7 (999) 999-99-99</a>
@@ -523,6 +523,10 @@
         </div>
     </div>
     <!-- /.popup-error -->
+    <script src="js/myLib.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/popup.js"></script>
+    <script src="js/scrollTo.js"></script>
     <script src="js/main.min.js"></script>
 </body>
 
