--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
             </header>
             <div class="contacts">
                 <div class="contacts__start">
-                    <div class="contacts__map"></div>
+                    <div class="contacts__map" id="ymap"></div>
                 </div>
                 <div class="contacts__end">
                     <div class="contacts__item">
@@ -523,12 +523,14 @@
         </div>
     </div>
     <!-- /.popup-error -->
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="js/myLib.js"></script>
     <script src="js/header.js"></script>
     <script src="js/popup.js"></script>
     <script src="js/scrollTo.js"></script>
     <script src="js/catalog.js"></script>
     <script src="js/product.js"></script>
+    <script src="js/map.js"></script>
     <script src="js/main.min.js"></script>
 </body>
 
