отправка на почту ajax - php
Для обработки обязателен PHP BACKEND!

--- a/src/index.html
+++ b/src/index.html
@@ -474,7 +474,7 @@
                         </h3>
                         <p class="order__size">35 см</p>
 
-                        <form class="form">
+                        <form class="form form-send">
                             <input class="order-info-title" type="hidden" name="пицца">
                             <input class="order-info-price" type="hidden" name="цена">
                             <input class="order-info-size" type="hidden" name="размер">
@@ -523,7 +523,7 @@
         </div>
     </div>
     <!-- /.popup-error -->
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script> -->
     <script src="js/myLib.js"></script>
     <script src="js/header.js"></script>
     <script src="js/popup.js"></script>
@@ -531,6 +531,7 @@
     <script src="js/catalog.js"></script>
     <script src="js/product.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/form.js"></script>
     <script src="js/main.min.js"></script>
 </body>
 
