js изменение цены при изменении размеров продукта

--- a/src/index.html
+++ b/src/index.html
@@ -100,9 +100,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="850" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="750" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="650" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
@@ -124,9 +124,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="950" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="850" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="750" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
@@ -148,9 +148,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="880" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="780" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="680" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
@@ -172,9 +172,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="1250" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="1150" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="950" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
@@ -196,9 +196,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="890" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="790" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="690" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
@@ -221,9 +221,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="850" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="750" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="650" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
@@ -246,9 +246,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="920" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="820" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="720" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
@@ -271,9 +271,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="990" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="890" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="790" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
@@ -295,9 +295,9 @@
                         </div>
                         <footer class="product__footer">
                             <div class="product__sizes">
-                                <button class="product__size is-active" type="button">35см</button>
-                                <button class="product__size" type="button">30см</button>
-                                <button class="product__size" type="button">25см</button>
+                                <button data-product-size-price="950" class="product__size is-active" type="button">35см</button>
+                                <button data-product-size-price="850" class="product__size" type="button">30см</button>
+                                <button data-product-size-price="750" class="product__size" type="button">25см</button>
                             </div>
                             <div class="product__bottom">
                                 <div class="product__price">
