fix wc3 validator errors

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <div class="container header-page__container">
             <div class="header-page__start">
                 <a class="logo" href="/">
-                    <img class="logo__img lazy" data-src="img/common/logo.svg" alt="" width="127" height="21">
+                    <img class="logo__img lazy" data-src="img/common/logo.svg" alt="" width="127" height="21" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=">
                 </a>
             </div>
             <div class="header-page__end">
@@ -554,7 +554,7 @@
         </div>
     </div>
     <!-- /.popup-error -->
-    
+
     <script src="js/main.min.js"></script>
 </body>
 
